# loop_bloom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TUTORIAL.md  USER_GUIDE.md  pyproject.toml  requirements-dev.txt  update_and_reinstall.sh
.github/workflows/: ci.yml
.tmp-test-json/: export_json.json  heavy.db  heavy.json  heavy_export.csv  heavy_sqlite_export.csv  report.json
.tmp-x/: data.json
Development/: microhabits_cli_playbook.md
docs/: conf.py  developer_diary.md  index.rst  modules.rst  user_feedback.md
loop_bloom/: __init__.py
loopbloom/: __init__.py  __main__.py  constants.py  logging.py
loopbloom/cli/: __init__.py  backup.py  checkin.py  completion.py  config.py  cope.py  debug.py  export.py  goal.py  interactive.py  journal.py  micro.py  pause.py  report.py  review.py  summary.py  tree.py  ui.py  utils.py
loopbloom/core/: __init__.py  config.py  coping.py  journal.py  models.py  progression.py  review.py  talks.py
loopbloom/data/: default_talks.json
loopbloom/services/: datetime.py  notifier.py  progression.py
loopbloom/storage/: base.py  json_store.py  sqlite_store.py
loopbloom/tests/: __init__.py  test_cli_help.py
scripts/: pre-commit
tests/: test_add.py  test_docs_cli_consistency.py  test_python_version_policy.py
tests/integration/: conftest.py  test_backup_cmd.py  test_checkin_and_progression.py  test_checkin_and_summary.py  test_checkin_fail.py  test_checkin_skip.py  test_checkin_success.py  test_completion_cmd.py  test_cope_cmd.py  test_cope_new.py  test_coping_and_data.py  test_coping_plan_list.py  test_coping_plan_run.py  test_critical_workflow.py  test_debug_state_sqlite.py  test_direct_microgoals.py  test_export_and_config_cmds.py  test_export_csv_progress.py  test_export_goal_level_micro.py  test_external_datapath.py  test_fresh_start_user.py  test_goal_add_new_goal.py  test_goal_cli.py  test_goal_wizard.py  test_goals_and_habits.py  test_interactive_selection.py  test_long_term_usage_and_progression.py  test_notify_and_sqlite.py  test_pause_cmd.py  test_phase_goal_flag.py  test_progression_summary.py  test_readme_commands.py  test_report_cmd.py  test_storage_backend_switching.py  test_tree_annotations.py  test_tree_cmd.py  test_user_forgetfulness_and_guidance.py
tests/unit/: test_additional_coverage.py  test_backend_selection.py  test_cli_all_commands_help.py  test_config_module.py  test_coping_repo.py  test_data_path_flag_backend_selection.py  test_debug_mode.py  test_export_flatten.py  test_journal_cli.py  test_micro_cli.py  test_models.py  test_notifier.py  test_progression.py  test_report_cli.py  test_reset_cmd.py  test_review_cli.py  test_ruff_config_schema.py  (+4 more)
tmp_cli/: data.json  export.csv
(+13 files in other folders)
