
[project]
name = "loop_bloom"
version = "0.0.1"
description = "ADHD Habit Stacking Tool"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.8"


[tool.poetry]
name = "loopbloom-cli"
version = "0.0.0"
description = "Compassion-first micro-habit tracker for the terminal."
packages = [{ include = "loopbloom" }]

[tool.poetry.scripts]
micro = "loopbloom.__main__:cli"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "W", "D"]

[tool.mypy]
strict = true
packages = "loopbloom"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
