[tool.poetry]
name = "loopbloom-cli"
version = "0.0.1"
description = "Compassion-first micro-habit tracker for the terminal."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "loopbloom" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
click = "^8.1.7"
typer = "^0.12.3"
PyYAML = "^6.0"
rich = "^14.0"
tomli-w = "*"
plyer = "^2.1.0"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"
plotext = "5.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
black = "*"
mypy = "*"
beartype = "*"
types-PyYAML = "*"
tomli-w = "*"
flake8 = "*"

[tool.poetry.scripts]
loopbloom = "loopbloom.__main__:cli"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "W", "D"]

[tool.mypy]
strict = true
packages = "loopbloom"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
